--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1782,44 +1782,44 @@ body {
 .cid-rifGN0z6be .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
-.cid-rifCbybXiQ .modal-body .close {
+.cid-rig5PjJj3V .modal-body .close {
   background: #1b1b1b;
 }
-.cid-rifCbybXiQ .modal-body .close span {
+.cid-rig5PjJj3V .modal-body .close span {
   font-style: normal;
 }
-.cid-rifCbybXiQ .carousel-inner > .active,
-.cid-rifCbybXiQ .carousel-inner > .next,
-.cid-rifCbybXiQ .carousel-inner > .prev {
+.cid-rig5PjJj3V .carousel-inner > .active,
+.cid-rig5PjJj3V .carousel-inner > .next,
+.cid-rig5PjJj3V .carousel-inner > .prev {
   display: table;
 }
-.cid-rifCbybXiQ .carousel-control .icon-next,
-.cid-rifCbybXiQ .carousel-control .icon-prev {
+.cid-rig5PjJj3V .carousel-control .icon-next,
+.cid-rig5PjJj3V .carousel-control .icon-prev {
   margin-top: -18px;
   font-size: 40px;
   line-height: 27px;
 }
-.cid-rifCbybXiQ .carousel-control:hover {
+.cid-rig5PjJj3V .carousel-control:hover {
   background: #1b1b1b;
   color: #fff;
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-rifCbybXiQ .container .carousel-control {
+  .cid-rig5PjJj3V .container .carousel-control {
     margin-bottom: 0;
   }
 }
-.cid-rifCbybXiQ .boxed-slider {
+.cid-rig5PjJj3V .boxed-slider {
   position: relative;
   padding: 93px 0;
 }
-.cid-rifCbybXiQ .boxed-slider > div {
+.cid-rig5PjJj3V .boxed-slider > div {
   position: relative;
 }
-.cid-rifCbybXiQ .container img {
+.cid-rig5PjJj3V .container img {
   width: 100%;
 }
-.cid-rifCbybXiQ .container img + .row {
+.cid-rig5PjJj3V .container img + .row {
   position: absolute;
   top: 50%;
   left: 0;
@@ -1829,17 +1829,17 @@ body {
   transform: translateY(-50%);
   z-index: 2;
 }
-.cid-rifCbybXiQ .mbr-section {
+.cid-rig5PjJj3V .mbr-section {
   padding: 0;
   background-attachment: scroll;
 }
-.cid-rifCbybXiQ .mbr-table-cell {
+.cid-rig5PjJj3V .mbr-table-cell {
   padding: 0;
 }
-.cid-rifCbybXiQ .container .carousel-indicators {
+.cid-rig5PjJj3V .container .carousel-indicators {
   margin-bottom: 3px;
 }
-.cid-rifCbybXiQ .carousel-caption {
+.cid-rig5PjJj3V .carousel-caption {
   top: 50%;
   right: 0;
   bottom: auto;
@@ -1850,15 +1850,15 @@ body {
   transform: translateY(-50%);
   -webkit-align-items: center;
 }
-.cid-rifCbybXiQ .mbr-overlay {
+.cid-rig5PjJj3V .mbr-overlay {
   z-index: 1;
 }
-.cid-rifCbybXiQ .container-slide.container {
+.cid-rig5PjJj3V .container-slide.container {
   min-width: 100%;
   min-height: 100vh;
   padding: 0;
 }
-.cid-rifCbybXiQ .carousel-item {
+.cid-rig5PjJj3V .carousel-item {
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -1871,26 +1871,26 @@ body {
   perspective: 1000px;
 }
 @media (max-width: 576px) {
-  .cid-rifCbybXiQ .carousel-item .container {
+  .cid-rig5PjJj3V .carousel-item .container {
     width: 100%;
   }
 }
-.cid-rifCbybXiQ .carousel-item-next.carousel-item-left,
-.cid-rifCbybXiQ .carousel-item-prev.carousel-item-right {
+.cid-rig5PjJj3V .carousel-item-next.carousel-item-left,
+.cid-rig5PjJj3V .carousel-item-prev.carousel-item-right {
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
-.cid-rifCbybXiQ .active.carousel-item-right,
-.cid-rifCbybXiQ .carousel-item-next {
+.cid-rig5PjJj3V .active.carousel-item-right,
+.cid-rig5PjJj3V .carousel-item-next {
   -webkit-transform: translate3d(100%, 0, 0);
   transform: translate3d(100%, 0, 0);
 }
-.cid-rifCbybXiQ .active.carousel-item-left,
-.cid-rifCbybXiQ .carousel-item-prev {
+.cid-rig5PjJj3V .active.carousel-item-left,
+.cid-rig5PjJj3V .carousel-item-prev {
   -webkit-transform: translate3d(-100%, 0, 0);
   transform: translate3d(-100%, 0, 0);
 }
-.cid-rifCbybXiQ .mbr-slider .carousel-control {
+.cid-rig5PjJj3V .mbr-slider .carousel-control {
   top: 50%;
   width: 70px;
   height: 70px;
@@ -1901,29 +1901,29 @@ body {
   border-radius: 50%;
   transition: all .3s;
 }
-.cid-rifCbybXiQ .mbr-slider .carousel-control.carousel-control-prev {
+.cid-rig5PjJj3V .mbr-slider .carousel-control.carousel-control-prev {
   left: 0;
   margin-left: 2.5rem;
 }
-.cid-rifCbybXiQ .mbr-slider .carousel-control.carousel-control-next {
+.cid-rig5PjJj3V .mbr-slider .carousel-control.carousel-control-next {
   right: 0;
   margin-right: 2.5rem;
 }
-.cid-rifCbybXiQ .mbr-slider .carousel-control .mbr-iconfont {
+.cid-rig5PjJj3V .mbr-slider .carousel-control .mbr-iconfont {
   font-size: 2rem;
 }
 @media (max-width: 767px) {
-  .cid-rifCbybXiQ .mbr-slider .carousel-control {
+  .cid-rig5PjJj3V .mbr-slider .carousel-control {
     top: auto;
     bottom: 1rem;
   }
 }
-.cid-rifCbybXiQ .mbr-slider .carousel-indicators {
+.cid-rig5PjJj3V .mbr-slider .carousel-indicators {
   position: absolute;
   bottom: 0;
   margin-bottom: 1.5rem !important;
 }
-.cid-rifCbybXiQ .mbr-slider .carousel-indicators li {
+.cid-rig5PjJj3V .mbr-slider .carousel-indicators li {
   max-width: 20px;
   width: 20px;
   height: 20px;
@@ -1935,15 +1935,15 @@ body {
   opacity: .5;
   transition: all .3s;
 }
-.cid-rifCbybXiQ .mbr-slider .carousel-indicators li.active,
-.cid-rifCbybXiQ .mbr-slider .carousel-indicators li:hover {
+.cid-rig5PjJj3V .mbr-slider .carousel-indicators li.active,
+.cid-rig5PjJj3V .mbr-slider .carousel-indicators li:hover {
   opacity: .9;
 }
-.cid-rifCbybXiQ .mbr-slider .carousel-indicators li::after,
-.cid-rifCbybXiQ .mbr-slider .carousel-indicators li::before {
+.cid-rig5PjJj3V .mbr-slider .carousel-indicators li::after,
+.cid-rig5PjJj3V .mbr-slider .carousel-indicators li::before {
   content: none;
 }
-.cid-rifCbybXiQ .mbr-slider .carousel-indicators.ie-fix {
+.cid-rig5PjJj3V .mbr-slider .carousel-indicators.ie-fix {
   left: 50%;
   display: block;
   width: 60%;
@@ -1951,14 +1951,14 @@ body {
   text-align: center;
 }
 @media (max-width: 576px) {
-  .cid-rifCbybXiQ .mbr-slider .carousel-indicators {
+  .cid-rig5PjJj3V .mbr-slider .carousel-indicators {
     display: none !important;
   }
 }
-.cid-rifCbybXiQ .mbr-slider > .container img {
+.cid-rig5PjJj3V .mbr-slider > .container img {
   width: 100%;
 }
-.cid-rifCbybXiQ .mbr-slider > .container img + .row {
+.cid-rig5PjJj3V .mbr-slider > .container img + .row {
   position: absolute;
   top: 50%;
   right: 0;
@@ -1968,56 +1968,56 @@ body {
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
 }
-.cid-rifCbybXiQ .mbr-slider > .container .carousel-indicators {
+.cid-rig5PjJj3V .mbr-slider > .container .carousel-indicators {
   margin-bottom: 3px;
 }
 @media (max-width: 576px) {
-  .cid-rifCbybXiQ .mbr-slider > .container .carousel-control {
+  .cid-rig5PjJj3V .mbr-slider > .container .carousel-control {
     margin-bottom: 0;
   }
 }
-.cid-rifCbybXiQ .mbr-slider .mbr-section {
+.cid-rig5PjJj3V .mbr-slider .mbr-section {
   padding: 0;
   background-attachment: scroll;
 }
-.cid-rifCbybXiQ .mbr-slider .mbr-table-cell {
+.cid-rig5PjJj3V .mbr-slider .mbr-table-cell {
   padding: 0;
 }
-.cid-rifCbybXiQ .carousel-item .container.container-slide {
+.cid-rig5PjJj3V .carousel-item .container.container-slide {
   position: initial;
   width: auto;
   min-height: 0;
 }
-.cid-rifCbybXiQ .full-screen .slider-fullscreen-image {
+.cid-rig5PjJj3V .full-screen .slider-fullscreen-image {
   min-height: 100vh;
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: cover;
 }
-.cid-rifCbybXiQ .full-screen .slider-fullscreen-image.active {
+.cid-rig5PjJj3V .full-screen .slider-fullscreen-image.active {
   display: -o-flex;
 }
-.cid-rifCbybXiQ .full-screen .container {
+.cid-rig5PjJj3V .full-screen .container {
   width: auto;
   padding-right: 0;
   padding-left: 0;
 }
-.cid-rifCbybXiQ .full-screen .carousel-item .container.container-slide {
+.cid-rig5PjJj3V .full-screen .carousel-item .container.container-slide {
   width: 100%;
   min-height: 100vh;
   padding: 0;
 }
-.cid-rifCbybXiQ .full-screen .carousel-item .container.container-slide img {
+.cid-rig5PjJj3V .full-screen .carousel-item .container.container-slide img {
   display: none;
 }
-.cid-rifCbybXiQ .mbr-background-video-preview {
+.cid-rig5PjJj3V .mbr-background-video-preview {
   position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
 }
-.cid-rifCbybXiQ .mbr-overlay ~ .container-slide {
+.cid-rig5PjJj3V .mbr-overlay ~ .container-slide {
   z-index: auto;
 }
 .cid-rifPbfPYxk {
