--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2095,6 +2095,41 @@ body {
 .cid-rifQptfZJb .card-wrapper {
   height: 100%;
 }
+.cid-rigcSMQIti {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rigcSMQIti .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-rigcSMQIti .mbr-content-text {
+  color: #767676;
+}
+.cid-rigcSMQIti .card {
+  word-wrap: break-word;
+  flex-shrink: 0;
+  -webkit-flex-shrink: 0;
+}
+.cid-rigcSMQIti .cards-container {
+  display: flex;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-justify-content: center;
+  justify-content: center;
+  word-break: break-word;
+}
+@media (max-width: 767px) {
+  .cid-rigcSMQIti .card:not(.last-child) {
+    padding-bottom: 1.5rem;
+  }
+}
+.cid-rigcSMQIti .img-text {
+  color: #c1c1c1;
+}
 .cid-rifCCiFkkg {
   padding-top: 0px;
   padding-bottom: 0px;
