--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2023,7 +2023,7 @@ body {
 .cid-rifPbfPYxk {
   padding-top: 30px;
   padding-bottom: 0px;
-  background-color: #2e2e2e;
+  background-image: url("../../../assets/images/banner-1990932-2000x707.png");
 }
 .cid-rifPbfPYxk .mbr-section-subtitle {
   color: #767676;
@@ -2061,7 +2061,7 @@ body {
 .cid-rifPMpZOxp {
   padding-top: 15px;
   padding-bottom: 15px;
-  background-color: #2e2e2e;
+  background-image: url("../../../assets/images/banner-1990932-2000x707.png");
 }
 .cid-rifPMpZOxp h4 {
   font-weight: 500;
@@ -2084,7 +2084,7 @@ body {
 .cid-rifQptfZJb {
   padding-top: 0px;
   padding-bottom: 0px;
-  background-color: #2e2e2e;
+  background-image: url("../../../assets/images/banner-1990932-2000x707.png");
 }
 .cid-rifQptfZJb h4 {
   font-weight: 500;
