--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2023,7 +2023,7 @@ body {
 .cid-rifPbfPYxk {
   padding-top: 30px;
   padding-bottom: 0px;
-  background-image: url("../../../assets/images/banner-1990932-2000x707.png");
+  background-color: #b20f1f;
 }
 .cid-rifPbfPYxk .mbr-section-subtitle {
   color: #767676;
@@ -2107,7 +2107,7 @@ body {
 .cid-rigcSMQIti {
   padding-top: 15px;
   padding-bottom: 0px;
-  background-image: url("../../../assets/images/banner-1990932-2000x707.png");
+  background-color: #b20f1f;
 }
 .cid-rigcSMQIti .mbr-section-subtitle {
   color: #767676;
@@ -2265,7 +2265,7 @@ body {
 .cid-ripXvM8hlM {
   padding-top: 15px;
   padding-bottom: 0px;
-  background-image: url("../../../assets/images/banner-1990932-2000x707.png");
+  background-color: #b20f1f;
 }
 .cid-ripXvM8hlM .mbr-section-subtitle {
   color: #767676;
@@ -2329,7 +2329,7 @@ body {
 .cid-rifT5Rm4zp {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #efefef;
+  background-color: #c1c1c1;
 }
 @media (max-width: 767px) {
   .cid-rifT5Rm4zp .content {
