--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2023,7 +2023,7 @@ body {
 .cid-rifPbfPYxk {
   padding-top: 30px;
   padding-bottom: 0px;
-  background-color: #b20f1f;
+  background-color: #c11021;
 }
 .cid-rifPbfPYxk .mbr-section-subtitle {
   color: #767676;
@@ -2107,7 +2107,7 @@ body {
 .cid-rigcSMQIti {
   padding-top: 15px;
   padding-bottom: 0px;
-  background-color: #b20f1f;
+  background-color: #c11021;
 }
 .cid-rigcSMQIti .mbr-section-subtitle {
   color: #767676;
@@ -2265,7 +2265,7 @@ body {
 .cid-ripXvM8hlM {
   padding-top: 15px;
   padding-bottom: 0px;
-  background-color: #b20f1f;
+  background-color: #c11021;
 }
 .cid-ripXvM8hlM .mbr-section-subtitle {
   color: #767676;
