--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -3,7 +3,8 @@
  * Copyright 2017 Mobirise
  */
 section {
-  background-color: #eeeeee; }
+  background-color: radial-gradient(ellipse farthest-corner at right bottom, #FFFFFF 0%, #FFFFAC 8%, #9f7928 25%, #8A6E2F 50%, transparent 70%),
+                radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 50%); }
 
 section,
 .container,
