--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -3,8 +3,7 @@
  * Copyright 2017 Mobirise
  */
 section {
-  background-color: radial-gradient(ellipse farthest-corner at right bottom, #FFFFFF 0%, #FFFFAC 8%, #9f7928 25%, #8A6E2F 50%, transparent 70%),
-                radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 50%); }
+  background-color: #eeeeee; }
 
 section,
 .container,
@@ -478,4 +477,36 @@ nav .mbr-section-btn {
 	padding: 0;
 	top: 0;
 	left: -2400px;
+}
+.float{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:90px;
+	right:40px;
+	background-color:#25d366;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+  font-size:30px;
+	box-shadow: 2px 2px 3px #999;
+  z-index:100;
+}
+
+.float1{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:160px;
+	right:40px;
+	background-color:rgb(0,0,255);
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+  font-size:30px;
+	box-shadow: 2px 2px 3px #999;
+  z-index:100;
+}
+.my-float{
+	margin-top:16px;
 }
